--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7", features = ["ws"] }
-tower-http = { version = "0.6", features = ["fs"] }
+tower-http = { version = "0.6", features = ["fs", "cors"] }
 tokio = { version = "1.0", features = ["full"] }
 hyper = { version = "1.0", features = ["full"] }
+http = "0.2"
+
+[profile.dev]
+incremental = true
