--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,13 +2,13 @@ FROM rust:1.81
 
 WORKDIR /app
 
-# Install cargo-watch for live reloading
-RUN cargo install cargo-watch
+# Install cargo-watch for live reloading and rustfmt
+RUN cargo install cargo-watch && \
+    rustup component add rustfmt
 
 COPY . .
 
 EXPOSE 3001
 
 # Run with cargo-watch to enable live reloading
-CMD ["cargo", "watch", "-x", "run"]
-
+CMD ["cargo", "watch", "-x", "run", "--poll"]
