--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - ./backend:/app
       - ./backend/data:/app/data
+      - cargo-target:/app/target
+      - cargo-registry:/usr/local/cargo/registry
     ports:
       - "3001:3001"
     environment:
@@ -15,8 +17,8 @@ services:
       
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
+        context: ./frontend
+        dockerfile: Dockerfile.dev
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -30,3 +32,5 @@ services:
 
 volumes:
   backend_data:
+  cargo-target:
+  cargo-registry: 
