--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,7 @@ tower-http = { version = "0.6", features = ["fs", "cors"] }
 tokio = { version = "1.0", features = ["full"] }
 hyper = { version = "1.0", features = ["full"] }
 http = "0.2"
+sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
 
 [profile.dev]
 incremental = true
