--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,8 +2,9 @@ FROM rust:1.81
 
 WORKDIR /app
 
-# Install cargo-watch for live reloading and rustfmt
+# Install cargo-watch for live reloading, rustfmt and sea-orm-cli
 RUN cargo install cargo-watch && \
+    cargo install sea-orm-cli && \
     rustup component add rustfmt
 
 COPY . .
