--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7", features = ["ws"] }
+axum = { version = "0.7", features = ["ws", "macros"] }
 tower-http = { version = "0.6", features = ["fs", "cors"] }
 tokio = { version = "1.0", features = ["full"] }
 hyper = { version = "1.0", features = ["full"] }
 http = "0.2"
 sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
+serde = { version = "1.0", features = ["derive"] }
 
 [profile.dev]
 incremental = true
