--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,6 +11,13 @@ hyper = { version = "1.0", features = ["full"] }
 http = "0.2"
 sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
-
+axum-auth = "0.7.0"
+futures = "0.3.31"
+tower-service = "0.3.3"
+tower = "0.5.2"
+rand = "0.8.5"
+serde_json = "1.0.134"
+chrono ={ version = "0.4.39", features = ["serde"] }
+ 
 [profile.dev]
 incremental = true
