--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,8 @@ tower = "0.5.2"
 rand = "0.8.5"
 serde_json = "1.0.134"
 chrono ={ version = "0.4.39", features = ["serde"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
  
 [profile.dev]
 incremental = true
