added new indexes and tables

--- a/backend/migration/Cargo.toml
+++ b/backend/migration/Cargo.toml
@@ -20,3 +20,6 @@ features = [
   "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
   "sqlx-sqlite",         # `DATABASE_DRIVER` feature
 ]
+
+[profile.dev]
+incremental = true
