--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0.134"
 chrono ={ version = "0.4.39", features = ["serde"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+lazy_static = "1.5.0"
  
 [profile.dev]
 incremental = true
