--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,6 +21,7 @@ chrono ={ version = "0.4.39", features = ["serde"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 lazy_static = "1.5.0"
+serde_with = "3.12.0"
  
 [profile.dev]
 incremental = true
