minor bug fixes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,10 +14,13 @@ RUN apt-get update && \
     apt-get install -y openssl libssl3 ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
 WORKDIR /usr/local/bin
 
 COPY --from=builder /usr/src/app/target/release/tracker ./tracker
+RUN chown appuser:appuser tracker
+
+USER appuser
 
 CMD ["./tracker"]
-
-
