--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^18.19.68",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "postcss-preset-env": "^10.1.3",
     "prettier": "^3.3.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
