--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,32 +2,27 @@ FROM node:16-alpine AS build
 
 WORKDIR /app
 
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+# Copy package files first for better caching
+COPY package.json package-lock.json ./
 
-COPY package.json package-lock.json postcss.config.js ./
+# Clean install dependencies including optional ones
+RUN npm ci --no-optional
 
-RUN chown -R appuser:appgroup /app && \
-    npm install -g npm@latest && \
-    npm ci && \
-    npm install -g react-scripts@5.0.1 && \
-    npm install postcss@8.4.14 postcss-preset-env@7.0.0 && \
-    npm install webpack@4.44.2 webpack-manifest-plugin@2.2.0 workbox-webpack-plugin@5.1.4
-
+# Copy source code
 COPY . .
-RUN chown -R appuser:appgroup /app
 
-USER appuser
+# Build with production settings
+ENV NODE_ENV=production
+ENV CI=true
 RUN npm run build
 
-
 FROM nginx:alpine
-
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-
 COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-RUN chown -R appuser:appgroup /usr/share/nginx/html && \
+# Non-root user setup
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup && \
+    chown -R appuser:appgroup /usr/share/nginx/html && \
     chown -R appuser:appgroup /var/cache/nginx && \
     chown -R appuser:appgroup /var/log/nginx && \
     chown -R appuser:appgroup /etc/nginx/conf.d && \
@@ -37,5 +32,4 @@ RUN chown -R appuser:appgroup /usr/share/nginx/html && \
 USER appuser
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
