--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.0.1",
     "react-router-dom": "^6.25.0",
     "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.12",
