updated docker compose to handle frontend builds better

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - FRONTEND_URL=${FRONTEND_URL}
       - PORT=3001
-    # depends_on:
-    #   - postgres
+    depends_on:
+      - postgres
 
   frontend:
     build:
@@ -36,19 +36,19 @@ services:
     depends_on:
       - backend
 
-#   postgres:
-#     image: postgres:15
-#     environment:
-#       - POSTGRES_USER=postgres
-#       - POSTGRES_PASSWORD=postgres
-#       - POSTGRES_DB=app
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data
-#     ports:
-#       - "5432:5432"
+  postgres:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=app
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
 volumes:
   backend_data:
   cargo-target:
   cargo-registry:
-#   postgres_data:
+  postgres_data:
