--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,6 +22,7 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 lazy_static = "1.5.0"
 serde_with = "3.12.0"
- 
+jsonwebtoken = "9.3.0"
+
 [profile.dev]
 incremental = true
