Fixes to the websocket

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,3 +12,5 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - FRONTEND_URL=${FRONTEND_URL}
       - PORT=3001
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - WEBSOCKET_BUFFER_SIZE=${WEBSOCKET_BUFFER_SIZE:-1000}
