--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.24.0",
+    "@uiw/react-markdown-preview": "^5.1.0",
+    "@uiw/react-md-editor": "^4.0.6",
     "axios": "^1.7.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -28,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.1",
     "react-router-dom": "^6.25.0",
+    "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.12",
     "uuidv4": "^6.2.13",
