--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,8 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - FRONTEND_URL=${FRONTEND_URL}
+      - FILE_STORE_SCHEME=${FILE_STORE_SCHEME}
+      - BASE_FILE_PATH=${BASE_FILE_PATH}
       - PORT=3001
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - WEBSOCKET_BUFFER_SIZE=${WEBSOCKET_BUFFER_SIZE:-1000}
