--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - FRONTEND_URL=${FRONTEND_URL}
+      - FILE_STORE_SCHEME=${FILE_STORE_SCHEME}
+      - BASE_FILE_PATH=${BASE_FILE_PATH}
       - PORT=3001
     depends_on:
       - postgres
