--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,7 @@ tracing-subscriber = "0.3.19"
 lazy_static = "1.5.0"
 serde_with = "3.12.0"
 jsonwebtoken = "9.3.0"
+serde_urlencoded = "0.7.1"
 
 [profile.dev]
 incremental = true
