--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,7 @@
     "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.12",
-    "uuidv4": "^6.2.13",
-    "webpack": "^5.76.0"
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -48,7 +47,7 @@
     "@types/react-dom": "^18.3.5",
     "postcss-preset-env": "^10.1.3",
     "prettier": "^3.3.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
   "eslintConfig": {
