updated docker compose to get images to work

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,3 +22,4 @@ services:
       - WEBSOCKET_BUFFER_SIZE=${WEBSOCKET_BUFFER_SIZE:-1000}
       - FILE_STORE_SCHEME=${FILE_STORE_SCHEME}
       - BASE_FILE_PATH=${BASE_FILE_PATH}
+      - PUBLIC_BASE_URL=${PUBLIC_BASE_URL}
